--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <%- link_to('music', '/music') %>
+    <h2>art</h2>
+    <h2>about/press</h2>
+    <h2>contact</h2>
   </body>
 </html>
