--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <%- link_to('music', '/music') %>
-    <h2>art</h2>
+    <%- link_to('art', '/art') %>
     <h2>about/press</h2>
     <h2>contact</h2>
   </body>
