--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <h1><%= title %></h1>
     <%- link_to('music', '/music') %>
     <%- link_to('art', '/art') %>
-    <h2>about/press</h2>
-    <h2>contact</h2>
+    <%- link_to('about/press', '/about') %>
+    <%- link_to('contact', '/contact') %>
   </body>
 </html>
