Include header partial into views

--- a/views/art.ejs
+++ b/views/art.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= title %></title>
-</head>
-<body>
-<h1>you made it to art!</h1>
-</body>
+  <head>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <%- include partials/_header.ejs %>
+    <h1>you made it to art!</h1>
+  </body>
 </html>
