--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <%- include partials/_header.ejs %>
     <%- link_to('music', '/music') %>
     <%- link_to('art', '/art') %>
     <%- link_to('about/press', '/about') %>
