Add soundcloud link to music view

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -9,5 +9,6 @@
     <iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=3330951767/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/endless-abundance-ep">Endless Abundance EP by hansmole</a></iframe>
     <iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=2800205613/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/comfort">Comfort by hansmole</a></iframe>
     <iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=1342143247/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/whitest-whiteness">Whitest Whiteness by hansmole</a></iframe>
+    <a href="https://soundcloud.com/hansmole" target="_blank">Soundcloud</a>
   </body>
 </html>
