Add mailto link to contact view

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <%- include partials/_header.ejs %>
-    <h1>you made it to contact!</h1>
+    <h1>Contact</h1>
+    <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" target="_top">Send an email</a>
   </body>
 </html>
