Add head partial to all views

--- a/views/art.ejs
+++ b/views/art.ejs
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-  </head>
+  <%- include partials/_head %>
   <body>
     <%- include partials/_header.ejs %>
     <h1>you made it to art!</h1>
