--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+  <%- include partials/_head %>
   <body>
     <%- include partials/_header.ejs %>
     <%- link_to('music', '/music') %>
