--- a/views/music.ejs
+++ b/views/music.ejs
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-  </head>
+  <%- include partials/_head %>
   <body>
     <%- include partials/_header.ejs %>
     <h1>Music</h1>
