Add facebook and instagram fa icons to contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,5 +5,7 @@
     <%- include partials/_header.ejs %>
     <h1>Contact</h1>
     <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" target="_top">Send an email</a>
+    <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank">Hansmole on Zuckerbook</a>
+    <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank">Hey, check out my instagram</a>
   </body>
 </html>
