Add github fb icon to contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,5 +7,6 @@
     <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" target="_top">Send an email</a>
     <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank">Hansmole on Zuckerbook</a>
     <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank">Hey, check out my instagram</a>
+    <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank">Look at my GitHub, if you like that sort of thing</a>
   </body>
 </html>
