Add email fa icon to contact view

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,9 +4,15 @@
   <body>
     <%- include partials/_header.ejs %>
     <h1>Contact</h1>
-    <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" target="_top">Send an email</a>
-    <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank">Hansmole on Zuckerbook</a>
-    <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank">Hey, check out my instagram</a>
-    <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank">Look at my GitHub, if you like that sort of thing</a>
+    <p>
+      <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" class="fa fa-envelope-o" target="_top"></a>
+      Send an email
+      <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank"></a>
+      Hansmole on Zuckerbook
+      <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank"></a>
+      Hey, check out my instagram
+      <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank"></a>
+      Look at my GitHub, if you like that sort of thing
+    </p>
   </body>
 </html>
