Add apple music widget

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -14,12 +14,11 @@
       <iframe style="border: 0; width: 250px; height: 508px;" src="https://bandcamp.com/EmbeddedPlayer/album=2800205613/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/comfort">Comfort by hansmole</a></iframe>
       <iframe style="border: 0; width: 250px; height: 508px;" src="https://bandcamp.com/EmbeddedPlayer/album=1342143247/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/whitest-whiteness">Whitest Whiteness by hansmole</a></iframe>
     </div>
-    <p class="soundcloud-widget">
-      <a href="https://soundcloud.com/hansmole" class="fa fa-soundcloud" target="_blank"></a>
+    <p class="follow-widgets">
+       <a href="https://soundcloud.com/hansmole" class="fa fa-soundcloud" target="_blank"></a>
       Soundcloud
-    </p>
-    <p class="spotify-widget">
       <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:3TC6NNo2RLkLaR9AVFwQsz&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+      <a href="https://geo.itunes.apple.com/ca/artist/hansmole/id1194785789?mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:115px;height:40px;" target="_blank"></a>
     </p>
   </body>
 </html>
