Move page links into _header to create navbar

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,9 @@
 <header>
   <a href='/'><%= title %></a>
+  <div class="navbar">
+    <%- link_to('music', '/music') %>
+    <%- link_to('art', '/art') %>
+    <%- link_to('about/press', '/about') %>
+    <%- link_to('contact', '/contact') %>
+  </div>
 </header>
