--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,24 @@
 <header>
-  <a href='/'><%= title %></a>
-  <div class="navbar">
-    <%- link_to('music', '/music') %>
-    <%- link_to('art', '/art') %>
-    <%- link_to('about/press', '/about') %>
-    <%- link_to('contact', '/contact') %>
-  </div>
+  <nav>
+    <a href='/'><%= title %></a>
+    <ul>
+      <li class="dropdown">
+        <h3>things to see</h3>
+        <ul class="sub-menu">
+          <li>
+            <%- link_to('music', '/music') %>
+          </li>
+          <li>
+            <%- link_to('art', '/art') %>
+          </li>
+          <li>
+            <%- link_to('about/press', '/about') %>
+          </li>
+          <li>
+            <%- link_to('contact', '/contact') %>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 </header>
