Add footer partial to all views

--- a/views/art.ejs
+++ b/views/art.ejs
@@ -4,5 +4,6 @@
   <body>
     <%- include partials/_header.ejs %>
     <h1>you made it to art!</h1>
+    <%- include partials/_footer.ejs %>
   </body>
 </html>
