--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -14,5 +14,6 @@
       <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank"></a>
       Look at my GitHub, if you like that sort of thing
     </p>
+    <%- include partials/_footer.ejs %>
   </body>
 </html>
