--- a/views/music.ejs
+++ b/views/music.ejs
@@ -20,5 +20,6 @@
       <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:3TC6NNo2RLkLaR9AVFwQsz&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
       <a href="https://geo.itunes.apple.com/ca/artist/hansmole/id1194785789?mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:115px;height:40px;" target="_blank"></a>
     </p>
+    <%- include partials/_footer.ejs %>
   </body>
 </html>
