--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,5 +4,6 @@
   <body>
     <%- include partials/_header.ejs %>
     <h1>you made it to about!</h1>
+    <%- include partials/_footer.ejs %>
   </body>
 </html>
