--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -82,4 +82,22 @@ body {
   body h2 {
     color: grey; }
 
+#homepage {
+  color: white;
+  font-size: 10vh;
+  text-align: center; }
+
+div.index-links {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 30vh; }
+  div.index-links a {
+    color: white;
+    font-size: 10vh;
+    text-decoration: none; }
+  div.index-links a:hover {
+    color: pink; }
+
 /*# sourceMappingURL=styles.css.map */
