Add page name variable to render dynamically across pages

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,7 @@
 <header>
   <nav>
-    <a href='/'><%= title %></a>
+    <a href="/" id="title"><%= title %></a>
+    <h1 id="path-name"><%= page %></h1>
     <ul>
       <li class="dropdown">
         <h3>things to see</h3>
