Remove static page headings

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,17 +3,24 @@
   <%- include partials/_head %>
   <body>
     <%- include partials/_header.ejs %>
-    <h1>Contact</h1>
-    <p>
-      <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" class="fa fa-envelope-o" target="_top"></a>
-      Send an email
-      <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank"></a>
-      Hansmole on Zuckerbook
-      <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank"></a>
-      Hey, check out my instagram
-      <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank"></a>
-      Look at my GitHub, if you like that sort of thing
-    </p>
+    <div class="contact-links">
+      <div>
+        <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" class="fa fa-envelope-o" target="_top"></a>
+        Send an email
+      </div>
+      <div>
+        <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank"></a>
+        Hansmole on Zuckerbook
+      </div>
+      <div>
+        <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank"></a>
+        Hey, check out my instagram
+      </div>
+      <div>
+        <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank"></a>
+        Look at my GitHub, if you like that sort of thing
+      </div>
+    </div>
     <%- include partials/_footer.ejs %>
   </body>
 </html>
