--- a/public/stylesheets/_body.scss
+++ b/public/stylesheets/_body.scss
@@ -3,10 +3,6 @@ body {
   margin: none;
   min-height: 100vh;
   padding-bottom: 16vh;
+  padding-top: 16vh;
   position: relative;
-
-  h1,
-  h2 {
-    color: grey;
-  }
 }
