--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import "navbar-menu";
-@import "footer";
-@import "body";
 @import "index";
+@import "body";
+@import "contact";
+@import "footer";
