Place link labels  in p tags

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,19 +6,19 @@
     <div class="contact-links">
       <div>
         <a href="mailto:hhhansmole@gmail.com?Subject=Hi%20Hansmole" class="fa fa-envelope-o" target="_top"></a>
-        Send an email
+        <p>Send an email</p>
       </div>
       <div>
         <a href="https://www.facebook.com/hhhansmole/" class="fa fa-facebook" target="_blank"></a>
-        Hansmole on Zuckerbook
+        <p>Hansmole on Zuckerbook</p>
       </div>
       <div>
         <a href="https://www.instagram.com/hhhansmole/" class="fa fa-instagram" target="_blank"></a>
-        Hey, check out my instagram
+        <p>Hey, check out my instagram</p>
       </div>
       <div>
         <a href="https://github.com/hannahva?tab=repositories" class="fa fa-github" target="_blank"></a>
-        Look at my GitHub, if you like that sort of thing
+        <p>Look at my GitHub, if you like that sort of thing</p>
       </div>
     </div>
     <%- include partials/_footer.ejs %>
