--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -76,16 +76,23 @@ body {
   position: relative; }
 
 div.contact-links {
-  align-items: flex-end;
+  align-items: flex-start;
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin-top: 30vh; }
-  div.contact-links div a {
-    color: white;
-    font-size: 10vh;
-    text-decoration: none; }
+  div.contact-links div {
+    width: 15vw; }
+    div.contact-links div a {
+      color: white;
+      display: inline-block;
+      font-size: 10vh;
+      text-decoration: none; }
+    div.contact-links div a:hover {
+      color: pink; }
+    div.contact-links div p {
+      font-size: 6vh; }
 
 footer {
   background-color: black;
