Rename about/press to about in dropdown menu

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,7 +13,7 @@
             <%- link_to('art', '/art') %>
           </li>
           <li>
-            <%- link_to('about/press', '/about') %>
+            <%- link_to('about', '/about') %>
           </li>
           <li>
             <%- link_to('contact', '/contact') %>
