Add new font family to index page

--- a/public/stylesheets/_index.scss
+++ b/public/stylesheets/_index.scss
@@ -1,6 +1,7 @@
 #homepage {
   color: white;
   font-size: 10vh;
+  font-family: 'Schoolbell', cursive;
   text-align: center;
 }
 
@@ -8,6 +9,7 @@ div.index-links {
   align-items: center;
   display: flex;
   flex-direction: row;
+  font-family: 'Schoolbell', cursive;
   justify-content: space-around;
   margin-top: 30vh;
 
