Place social widgets in divs for flexbox

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -7,18 +7,24 @@
       <iframe src="https://open.spotify.com/embed?uri=spotify:album:63v2rtuWBHCMtd9ospC1uL" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
       <iframe src="https://open.spotify.com/embed?uri=spotify:album:71TbXO3dNZjoc10QPanoyX" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
     </div>
+    <h2>or if you don't have spotify...</h2>
     <div class="bandcamp-players">
-      <h2>or if you don't have spotify...</h2>
-      <iframe style="border: 0; width: 250px; height: 508px;" src="https://bandcamp.com/EmbeddedPlayer/album=3330951767/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/endless-abundance-ep">Endless Abundance EP by hansmole</a></iframe>
-      <iframe style="border: 0; width: 250px; height: 508px;" src="https://bandcamp.com/EmbeddedPlayer/album=2800205613/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/comfort">Comfort by hansmole</a></iframe>
-      <iframe style="border: 0; width: 250px; height: 508px;" src="https://bandcamp.com/EmbeddedPlayer/album=1342143247/size=large/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/whitest-whiteness">Whitest Whiteness by hansmole</a></iframe>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3330951767/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/endless-abundance-ep">Endless Abundance EP by hansmole</a></iframe>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2800205613/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/comfort">Comfort by hansmole</a></iframe>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1342143247/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://hansmole.bandcamp.com/album/whitest-whiteness">Whitest Whiteness by hansmole</a></iframe>
     </div>
-    <p class="follow-widgets">
-       <a href="https://soundcloud.com/hansmole" class="fa fa-soundcloud" target="_blank"></a>
-      Soundcloud
-      <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:3TC6NNo2RLkLaR9AVFwQsz&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
-      <a href="https://geo.itunes.apple.com/ca/artist/hansmole/id1194785789?mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:115px;height:40px;" target="_blank"></a>
-    </p>
+    <div class="follow-widgets">
+      <div>
+        <a href="https://soundcloud.com/hansmole" class="fa fa-soundcloud" target="_blank"></a>
+        Soundcloud
+      </div>
+      <div>
+        <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:3TC6NNo2RLkLaR9AVFwQsz&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+      </div>
+      <div>
+        <a href="https://geo.itunes.apple.com/ca/artist/hansmole/id1194785789?mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:200px;height:50px;" class="spotify-follow"target="_blank"></a>
+      </div>
+    </div>
     <%- include partials/_footer.ejs %>
   </body>
 </html>
