Add scss variables into existing stylesheets, change dropdown to transparent background, change colour of header and footer

--- a/public/stylesheets/_body.scss
+++ b/public/stylesheets/_body.scss
@@ -1,8 +1,11 @@
+@import "variables";
+
 body {
-  background-color: black;
-  margin: none;
+  background-color: $main-color;
+  font-family: $main-font;
+  margin: 0;
   min-height: 100vh;
-  padding-bottom: 16vh;
+  padding-bottom: 15vh;
   padding-top: 16vh;
   position: relative;
 }
